# appium_flutter_demo

./: .gitignore
demo_test/: .env_example  pyproject.toml
demo_test/test/home_screen/: test_home_screen.py
demo_test/test/utils/: app_flutter_finder.py  base_test_case.py  driver_setup.py  testing_platform.py
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/example/appium_demo/: MainActivity.kt
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart  main_test.dart
flutter_app/lib/finders/icon_finder/: icon_finder.dart  icon_finder_extension.dart
flutter_app/lib/models/: record_model.dart
flutter_app/lib/ui/screens/: home_screen.dart  webview_screen.dart
flutter_app/lib/ui/widgets/: empty_widget.dart  new_item_dialog.dart  record_card.dart
